--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,32 @@
         android:theme="@style/Theme.Composedemo1"
         tools:targetApi="31">
         <activity
+            android:name=".SnackBarCompose"
+            android:exported="true"
+            android:label="@string/title_activity_snack_bar_compose"
+            android:theme="@style/Theme.Composedemo1">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Bottoni"
+            android:exported="true"
+            android:label="@string/title_activity_bottoni"
+            android:theme="@style/Theme.Composedemo1">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".Boxes"
             android:exported="true"
             android:label="@string/title_activity_boxes"
-            android:theme="@style/Theme.Composedemo1" >
+            android:theme="@style/Theme.Composedemo1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
