--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,17 @@
         android:theme="@style/Theme.Composedemo1"
         tools:targetApi="31">
         <activity
+            android:name=".ComposeStateDemo"
+            android:exported="true"
+            android:label="@string/title_activity_compose_state_demo"
+            android:theme="@style/Theme.Composedemo1" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".recyclerviewcompose.InfoActivity"
             android:exported="false"
             android:label="@string/title_activity_info"
