--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,21 @@
         android:theme="@style/Theme.Composedemo1"
         tools:targetApi="31">
         <activity
+            android:name=".ComposeStateLessDemo"
+            android:exported="true"
+            android:label="@string/title_activity_compose_state_less_demo"
+            android:theme="@style/Theme.Composedemo1">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ComposeStateDemo"
             android:exported="true"
             android:label="@string/title_activity_compose_state_demo"
-            android:theme="@style/Theme.Composedemo1" >
+            android:theme="@style/Theme.Composedemo1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
