--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,17 @@
         android:theme="@style/Theme.Composedemo1"
         tools:targetApi="31">
         <activity
+            android:name=".FlowDemoOperator"
+            android:exported="true"
+            android:label="@string/title_activity_flow_demo_operator"
+            android:theme="@style/Theme.Composedemo1">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".FlowDemoCooroutinePressure"
             android:exported="true"
             android:label="@string/title_activity_flow_demo_cooroutine_pressure"
